--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -7,7 +7,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <a href="/admin/register"><button type="button" class="btn btn-primary">Register Student</button></a>
+                        <a href="/admin/yearone"><button type="button" class="btn btn-primary">Year One</button></a>
                     </div>
                 </div>
             </div>
@@ -15,7 +15,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <a href="/admin/result"><button type="button" class="btn btn-primary">Upload Results</button></a>
+                        <a href="/admin/yeartwo"><button type="button" class="btn btn-primary">Year Two</button></a>
                     </div>
                 </div>
             </div>
@@ -25,7 +25,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <a href="/admin/checkresult"><button type="button" class="btn btn-primary">Check Result</button></a>
+                        <a href="/admin/yearthree"><button type="button" class="btn btn-primary">Year Three</button></a>
                     </div>
                 </div>
             </div>
@@ -33,7 +33,25 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <a href=""><button type="button" class="btn btn-primary"></button></a>
+                        <a href="/admin/addclasscombo"><button type="button" class="btn btn-primary">Add Subject Combinations</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row" style="margin:1px;">
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <a href="/admin/updateclasscombo"><button type="button" class="btn btn-primary">Update Subject Combinations</button></a>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <a href="/admin/deleteclasscombo"><button type="button" class="btn btn-primary">Delete Subject Combinations</button></a>
                     </div>
                 </div>
             </div>
