--- a/app/templates/admin/header.html
+++ b/app/templates/admin/header.html
@@ -10,7 +10,7 @@
 
 <body>
   <nav class="navbar navbar-light bg-light" style="margin: 2px; height:70px;">
-    <button type="button" class="btn btn-outline-primary btn-md">Student Result Management</button>
+    <a href="/admin/dashboard"><button type="button" class="btn btn-outline-primary btn-md">Student Result Management</button></a>
   </nav>
 
   {% block body %} {% endblock %}
