--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -12,10 +12,14 @@
                 </div>
             </div>
             <br>
+        </div>
+        <br>
+        <div class="row" style="margin:1px;">
+            <br>
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <a href="/admin/yeartwo"><button type="button" class="btn btn-primary">Year Two</button></a>
+                        <a href="/admin/addsubjectcombo"><button type="button" class="btn btn-primary">Add Subject Combinations</button></a>
                     </div>
                 </div>
             </div>
@@ -25,7 +29,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <a href="/admin/yearthree"><button type="button" class="btn btn-primary">Year Three</button></a>
+                        <a href="/admin/updatesubjectcombo"><button type="button" class="btn btn-primary">Update Subject Combinations</button></a>
                     </div>
                 </div>
             </div>
@@ -33,25 +37,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <a href="/admin/addclasscombo"><button type="button" class="btn btn-primary">Add Subject Combinations</button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="row" style="margin:1px;">
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <a href="/admin/updateclasscombo"><button type="button" class="btn btn-primary">Update Subject Combinations</button></a>
-                    </div>
-                </div>
-            </div>
-            <br>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <a href="/admin/deleteclasscombo"><button type="button" class="btn btn-primary">Delete Subject Combinations</button></a>
+                        <a href="/admin/deletesubjectcombo"><button type="button" class="btn btn-primary">Delete Subject Combinations</button></a>
                     </div>
                 </div>
             </div>
